k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-api
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: dandberg/webapp-api
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3001
