k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-client
spec:
  replicas: 1
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: dandberg/webapi-client
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
